test/corpus/comments.txt
================================================================================
Inline comment
================================================================================

{# a comment #}

--------------------------------------------------------------------------------

(template
  (unpaired_comment)
  (content))
