test/corpus/expressions.txt
================================================================================
Variable expression
================================================================================

{{ foo }}

--------------------------------------------------------------------------------

(template
  (variable
    (variable_name))
  (content))

================================================================================
Variable with filter
================================================================================

{{ foo|upper }}

--------------------------------------------------------------------------------

(template
  (variable
    (variable_name)
    (filter
      (filter_name)))
  (content))

================================================================================
Variable with filter and argument
================================================================================

{{ foo|default:"bar" }}

--------------------------------------------------------------------------------

(template
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (content))

================================================================================
Variable with chained filters
================================================================================

{{ foo|upper|title }}

--------------------------------------------------------------------------------

(template
  (variable
    (variable_name)
    (filter
      (filter_name))
    (filter
      (filter_name)))
  (content))

================================================================================
String literal with filter
================================================================================

{{ "hello"|upper }}

--------------------------------------------------------------------------------

(template
  (string
    (filter
      (filter_name)))
  (content))

================================================================================
Filter with variable argument
================================================================================

{{ foo|default:fallback }}

--------------------------------------------------------------------------------

(template
  (variable
    (variable_name)
    (filter
      (filter_name)
      (filter_argument)))
  (content))
