test/corpus/front_matter.txt
================================================================================
Simple front matter
================================================================================

---
props.types = {"label": str}
---
{{ label }}

--------------------------------------------------------------------------------

(template
  (front_matter)
  (variable
    (variable_name))
  (content))

================================================================================
Multi-line front matter
================================================================================

---
props.types = {"label": str}
props.defaults = {"label": "World"}
---
<p>Hello {{ label }}</p>

--------------------------------------------------------------------------------

(template
  (front_matter)
  (content)
  (variable
    (variable_name))
  (content))
