test/corpus/tags.txt
================================================================================
if statement
================================================================================

{% if x %}yes{% endif %}

--------------------------------------------------------------------------------

(template
  (paired_statement
    (tag_name)
    (variable
      (variable_name))
    (content)
    (tag_name)
    (end_paired_statement))
  (content))

================================================================================
for statement
================================================================================

{% for i in items %}{{ i }}{% endfor %}

--------------------------------------------------------------------------------

(template
  (paired_statement
    (tag_name)
    (variable
      (variable_name))
    (keyword_operator)
    (variable
      (variable_name))
    (variable
      (variable_name))
    (tag_name)
    (end_paired_statement))
  (content))

================================================================================
load tag
================================================================================

{% load slippers %}

--------------------------------------------------------------------------------

(template
  (unpaired_statement
    (tag_name)
    (variable
      (variable_name)))
  (content))
